# bot-showalter

./: .envrc.example  .envrc.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION.md  README.md  config.default.yaml  fbm.toml  grid_search_results.json  pyproject.toml
.claude/: settings.json
.claude/skills/: draft-advice.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
data/adp/: README.md
data/projections/: README.md
docs/: architecture.md  bayesian-regression.md  composite-model.md  data-layer.md  distributional-projections.md  draft-strategy-2026.md  draft-ui-design.md  enhanced-playing-time.md  experiment-system-generalization.md  flex-replacement-inflated-counts.md  in-season-category-pace.md  in-season-matchup-analyzer.md  in-season-ros-projections.md  in-season-start-sit.md  in-season-trade-evaluator.md  in-season-waiver-ranker.md  model-di.md  model-registry.md  per-pitcher-babip-skill.md  pitcher-calibration-results.md  pitcher-statcast-blending.md  platoon-splits.md  playing-time-landscape.md  principles.md  refactoring-roadmap.md  statcast-contact-quality.md  statcast-gbm-evaluation.md  stolen-base-rule-adjustment.md
docs/active/: contextual-cloud-gpu-training.md  contextual-event-embeddings.md  contextual-model-bug-audit.md  contextual-model-evaluation.md  contextual-training-strategies.md  feature-store-migration.md  ml-minor-league-equivalencies.md  ml-valuation-function.md  model-registry-migration.md  pitching-projection-improvements.md  prediction-intervals-uncertainty.md  refactoring-roadmap.md  skill-change-approach.md
docs/architecture/: datasource-migration.md
docs/archive/: contextual-event-embeddings.md  contextual-model-bug-audit.md  contextual-model-evaluation.md  datasource-migration.md  deferred-adp-comparison.md  feature-store-migration.md  model-registry-migration.md  refactoring-roadmap.md
docs/design/: design-custom-statcast-park-factors.md  design-physics-park-factor-validation.md  design-pitching-park-factors.md  unified-command-design.md
docs/evaluations/: evaluation-summary.md  marcel.json  marcel_park.json  marcel_plus.json  marcel_statreg.json  park-factors-savant.md  park_half_game_correction.json  pitcher-normalization.md  platoon-splits.md
docs/guides/: contextual-cloud-gpu-training.md  contextual-training-strategies.md  minor-league-equivalencies.md
docs/plans/: INDEX.md  actual-valuation-sp-rp.md  adp-arbitrage-alerts.md  adp-integration.md  auction-budget-optimizer.md  breakout-bust-classifier.md  category-balance-tracker.md  cli-consistency.md  composite-gbm-engine.md  composite-gbm-tuning.md  connection-pool-repos.md  contextual-model-v2.md  data-layer.md  data-profiling-tools.md  discord-bot.md  draft-board-export.md  draft-order.md  draft-performance.md  draft-pick-keeper-support.md  draft-pick-trade-evaluator.md  draft-pick-trades.md  draft-session-persistence.md  evaluation-framework.md  evaluation-guardrails.md  experiment-journal.md  experiment-system-generalization.md  (+76 more)
frontend/: biome.json  codegen.ts  index.html  package.json  schema.graphql  vite.config.ts
notebooks/: breakout_bust_classifier_report.ipynb  breakout_bust_valuation_adjustment.ipynb  browse_projections.ipynb  feature_engineering.ipynb  hierarchical_inspection.ipynb  pitcher_ip_calibration_eval.ipynb  pitcher_ip_distribution_baseline.ipynb  pitcher_ip_validation.ipynb  pitcher_valuation_direct_rate.ipynb  projection_accuracy.ipynb  sgp_denominator_analysis.ipynb  sgp_denominator_investigation.ipynb  stat_distributions.ipynb  talent_delta.ipynb  valuation_position_distribution.ipynb
rdm-implement/: SKILL.md
rdm-review/: SKILL.md
rdm-roadmap/: SKILL.md
scripts/: export_schema.py  generate_consensus_pt.py  grid_search.py  gwt-implement.sh  gwt-remove.sh  gwt.sh  modal_train.py  run_discord_bot.py  run_mle_evaluation.py
tests/: conftest.py  helpers.py  test_analysis_container.py  test_cli.py  test_config.py  test_config_toml.py  test_config_yahoo.py  test_context.py  test_engines.py  test_exceptions.py  test_helpers.py  test_league_config.py  test_main.py  test_name_utils.py  test_placeholder.py  test_result.py  test_team_aliases.py  test_team_resolver.py  test_yahoo_api.py
(+1375 files in other folders)
