[project]
name = "fantasy-baseball-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "pybaseball>=2.2.0",
    "pylahman>=0.7.0",
    "scikit-learn>=1.6.0",
    "tenacity>=9.0.0",
    "typer>=0.15.0",
]

[project.scripts]
fbm = "fantasy_baseball_manager.cli.app:app"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-randomly>=4.0.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "PLC0415"]

[tool.pytest.ini_options]
addopts = "-n auto -p randomly"
