[project]
name = "fantasy-baseball-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord.py>=2.4",
    "flask>=3.0",
    "httpx>=0.28.0",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.3",
    "playwright>=1.49.0",
    "scikit-learn>=1.6.0",
    "tenacity>=9.0.0",
    "typer>=0.15.0",
]

[project.scripts]
fbm = "fantasy_baseball_manager.cli.app:app"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["B", "E", "F", "I", "INP", "PLC0415", "S", "SIM", "T20", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S107", "S108", "S110", "S311"]
"src/fantasy_baseball_manager/agent/chat.py" = ["T201"]
"src/fantasy_baseball_manager/features/assembler.py" = ["S608"]
"src/fantasy_baseball_manager/features/sql.py" = ["S608"]
"src/fantasy_baseball_manager/repos/player_repo.py" = ["S608"]
"src/fantasy_baseball_manager/repos/projection_repo.py" = ["S608"]
"src/fantasy_baseball_manager/services/adp_accuracy.py" = ["S608"]
"src/fantasy_baseball_manager/services/dataset_catalog.py" = ["S608"]
"tests/db/test_statcast_connection.py" = ["S608"]
"tests/features/test_assembler.py" = ["S608"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
  "src/fantasy_baseball_manager/repos/protocols.py",
  "src/fantasy_baseball_manager/ingest/protocols.py",
  "src/fantasy_baseball_manager/features/protocols.py",
  "**/__init__.py"
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]
fail_under = 88

[tool.pytest.ini_options]
addopts = "-n auto -p randomly"
markers = [
    "slow: tests that train real ML models (deselect with -m 'not slow')",
]
